# axcpy

./: .gitignore  ADP_RESTRUCTURING.md  AGENTS.md  DESIGN.md  LICENSE  README.md  adp_tasks_description.md  main.py  pyproject.toml
.opencode/skills/axcelerate-status/: DEFAULT_CREDENTIALS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SKILL.md
docs/: getting-started.md  implementing_tasks.md  index.md
docs/api-reference/: .gitkeep  adp-tasks.md
docs/examples/: .gitkeep
examples/: adp_async_examples.py  adp_examples.py  combined_workflow.py  searchWebApi_examples.py  search_examples.py
scripts/: generate_searchwebapi.ps1  generate_searchwebapi.sh  setup_dev.sh
src/axcpy/: __init__.py  __version__.py
src/axcpy/adp/: __init__.py  api_spec.json  api_spec.md  client.py  exceptions.py  models.py
src/axcpy/adp/endpoints/: __init__.py  cases.py  documents.py  search.py
src/axcpy/adp/models/: __init__.py  base.py  create_data_source.py  create_ocr_job.py  export_documents.py  list_entities.py  manage_host_roles.py  manage_users_and_groups.py  query_engine.py  read_configuration.py  read_service_alerts.py  request.py  response.py  start_application.py  task_spec.py  taxonomy_statistic.py
src/axcpy/adp/services/: __init__.py  async_client.py  async_session.py  client.py  session.py
src/axcpy/api/: __init__.py  main.py
src/axcpy/api/middleware/: .gitkeep
src/axcpy/api/routes/: .gitkeep
src/axcpy/cli/: __init__.py  adp_commands.py  main.py  search_commands.py
src/axcpy/common/: __init__.py  auth.py  config.py  exceptions.py  http.py
src/axcpy/searchwebapi/: __init__.py  client.py
tests/: __init__.py  conftest.py
tests/test_adp/: __init__.py  test_async_client.py  test_client.py  test_create_ocr_job.py  test_manage_users_and_groups.py  test_read_service_alerts.py  test_start_application.py  test_task_config_union.py
tests/test_cli/: test_main.py
tests/test_searchwebapi/: __init__.py
