[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axcpy"
version = "0.1.0"
description = "Python client library for OpenText Axcelerate eDiscovery service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Paul Yan", email = "pyan@opentext.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests",
]
api = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]

[project.scripts]
axcpy = "axcpy.cli.main:app"

[project.urls]
Homepage = "https://github.com/xifanyan/axcpy"
Documentation = "https://github.com/xifanyan/axcpy/docs"
Repository = "https://github.com/xifanyan/axcpy"

[tool.uv]
# Note: Kiota CLI should be installed separately via npm or other means
# dev-dependencies = []

[tool.hatchling.build.targets.wheel]
packages = ["src/axcpy"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
